Fix overflow

--- a/_sass/_component.site-footer.scss
+++ b/_sass/_component.site-footer.scss
@@ -5,6 +5,7 @@
     background: $navy;
     text-align: center;
     padding: 0 0 2rem 0;
+    overflow: hidden;
 
     a {
         color: $white;
