--- a/_sass/_page.home.scss
+++ b/_sass/_page.home.scss
@@ -9,7 +9,7 @@
         }
 
         &__content {
-            padding-right: 40%;
+            padding: 0 40% 0 0;
             margin-top: 0;
         }
 
@@ -20,7 +20,7 @@
 
     .page-content {
         padding-bottom: 4rem;
-        overflow-y: hidden;
+        overflow: hidden;
     }
 
     .col-img {
